--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "carbon-next-app",
+  "name": "ai-sustainability-catalog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,18 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@carbon/icons-react": "^11.45.0",
+    "@carbon/layout": "^11.23.0",
+    "@carbon/themes": "^11.37.0",
+    "@types/styled-components": "^5.1.34",
+    "carbon-components": "^10.58.15",
+    "carbon-components-react": "^8.62.0",
+    "carbon-icons": "^7.0.7",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "sass": "^1.77.8",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/carbon__themes": "^0.0.3",
+    "@types/carbon-components-react": "^7.55.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
