--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
-// tsconfig.json
 {
   "compilerOptions": {
-    "target": "es5",
+    "baseUrl": ".", // This allows relative imports to be used
+    "paths": {
+      "*": [
+        "node_modules/*"
+      ]
+    },
     "lib": [
       "dom",
       "dom.iterable",
@@ -9,26 +13,21 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
+    "strict": false,
     "noEmit": true,
+    "incremental": true,
+    "module": "esnext",
     "esModuleInterop": true,
-    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true,
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    },
     "plugins": [
       {
         "name": "next"
       }
     ]
+    // other options...
   },
   "include": [
     "next-env.d.ts",
