--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ai-sustainability-catalog",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,30 +13,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@carbon/icons-react": "^11.45.0",
     "@carbon/layout": "^11.23.0",
+    "@carbon/react": "^1.62.1",
     "@carbon/themes": "^11.37.0",
     "@types/styled-components": "^5.1.34",
+    "autoprefixer": "^10.4.19",
     "carbon-components": "^10.58.15",
-    "carbon-components-react": "^8.62.0",
+    "carbon-components-react": "^8.62.1",
     "carbon-icons": "^7.0.7",
+    "js-yaml": "^4.1.0",
     "next": "^14.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sass": "^1.77.8",
-    "styled-components": "^6.1.12"
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "@types/carbon__themes": "^0.0.3",
     "@types/carbon-components-react": "^7.55.13",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "gh-pages": "^6.1.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5"
   }
 }
