--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@carbon/icons-react": "^11.47.0",
     "@carbon/layout": "^11.23.0",
-    "@carbon/react": "^1.62.1",
+    "@carbon/react": "^1.64.0",
     "@carbon/themes": "^11.37.0",
     "@types/styled-components": "^5.1.34",
     "autoprefixer": "^10.4.19",
@@ -23,7 +24,10 @@
     "carbon-icons": "^7.0.7",
     "js-yaml": "^4.1.0",
     "next": "^14.2.5",
-    "sass": "^1.77.8"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sass": "^1.77.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/carbon__themes": "^0.0.3",
